k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myshortlink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myshortlink
  template:
    metadata:
      labels:
        app: myshortlink
    spec:
      containers:
        - name: myshortlink
          image: 192.168.1.150:5000/penicili/myshortlink:__IMAGE_TAG__
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: myshortlink
spec:
  selector:
    app: myshortlink
  ports:
    - port: 8000
      targetPort: 8000
  type: NodePort
