k8s/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortlink-app
  labels:
    app: shortlink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortlink
  template:
    metadata:
      labels:
        app: shortlink
    spec:
      containers:
      - name: shortlink
        image: penicili/myshortlink:latest
        ports:
        - containerPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name:  shortlink-app
spec:
  selector:
    app:  shortlink
  type:  NodePort
  ports:
  - name:  fastapi
    port:  8000
    targetPort:  8000
