k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14.24-alpine3.23
        ports:
        - containerPort: 5432
---
kind: Service
apiVersion: v1
metadata:
  name: postgres-service
spec:
  selector:
    app:  postgres
  ports:
  - protocol: TCP
    port:  5432
    targetPort:  5432
