k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortlink-ingress
spec:
  rules:
  - host: "shortlink.test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shortlink
            port:
              number: 8000
